--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "license": "ISC",
   "description": "",
   "devDependencies": {
+    "@cypress/xpath": "^2.0.3",
     "@faker-js/faker": "^9.5.0",
     "cypress": "^14.0.3"
   }
