--- a/package.json
+++ b/package.json
@@ -13,5 +13,8 @@
     "@cypress/xpath": "^2.0.3",
     "@faker-js/faker": "^9.5.0",
     "cypress": "^14.0.3"
+  },
+  "dependencies": {
+    "cypress-real-events": "^1.14.0"
   }
 }
