--- a/package.json
+++ b/package.json
@@ -11,8 +11,11 @@
   "description": "",
   "devDependencies": {
     "@cypress/xpath": "^2.0.3",
+    "@eslint/js": "^9.22.0",
     "@faker-js/faker": "^9.5.0",
-    "cypress": "^14.0.3"
+    "cypress": "^14.0.3",
+    "eslint": "^9.22.0",
+    "globals": "^16.0.0"
   },
   "dependencies": {
     "cypress-real-events": "^1.14.0"
